BMSSimplificationEclipseWS/EUFULL-Org-Backup/src/objects/MC_Cycle_Plan_Summary_vod__c.object
<CustomObject>
    <description>Stores Channel and Product aggregate calculations for each cycle plan.</description>
    <fields>
        <fullName>Attainment_vod__c</fullName>
        <description>Interactions_Earned_vod / Interactions_Goal_vod. If no goals then value is blank.</description>
        <label>Attainment</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Cycle_Channel_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Distinct Channel that the Summary record may be related to.</description>
        <label>Channel</label>
        <referenceTo>MC_Cycle_Channel_vod__c</referenceTo>
        <relationshipLabel>Cycle Plan Summaries</relationshipLabel>
        <relationshipName>MC_Cycle_Plan_Summaries_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Cycle_Plan_vod__c</fullName>
        <description>Cycle Plan that the Summary record is related to.</description>
        <label>Cycle Plan</label>
        <referenceTo>MC_Cycle_Plan_vod__c</referenceTo>
        <relationshipLabel>Cycle Plan Summary</relationshipLabel>
        <relationshipName>MC_Cycle_Plan_Summaries_vod</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Detail_Group_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Detail Group that the Product belongs to that the Summary record may be related to</description>
        <label>Detail Group</label>
        <referenceTo>Product_vod__c</referenceTo>
        <relationshipLabel>MC Cycle Plan Summaries (Detail Group)</relationshipLabel>
        <relationshipName>MC_Cycle_Plan_Summaries_Detail_Group</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Interactions_Earned_vod__c</fullName>
        <description>Sum of all interactions earned based on the RecordType.</description>
        <label>Interactions Earned</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Interactions_Goal_vod__c</fullName>
        <description>Sum of all interaction goals based on the RecordType</description>
        <label>Interactions Goal</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Last_Calculated_vod__c</fullName>
        <description>Date and time the Cycle Plan was last calculated.</description>
        <label>Last Calculated</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Percent_All_Goals_vod__c</fullName>
        <description>Percent that the distinct channel or product represents of all goals for all channels or products (depending on the RecordType). All goals add up to 100% when activity goals are used. If no goals used this value will be blank.</description>
        <label>% of All Goals</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Product that the Summary record may be related to.</description>
        <label>Product</label>
        <referenceTo>Product_vod__c</referenceTo>
        <relationshipLabel>MC Cycle Plan Summaries</relationshipLabel>
        <relationshipName>MC_Cycle_Plan_Summaries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status_vod__c</fullName>
        <description>Comparing the Cycle Plan &apos;s Attainment and the % Cycle Completed.</description>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Over_Reached_vod</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Under_Reached_vod</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On_Schedule_vod</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Summary_For_vod__c</fullName>
        <description>Channel Label or Product Name that is being summarized.</description>
        <formula>IF(
  RecordType.DeveloperName = &apos;Channel_vod&apos;,
  Cycle_Channel_vod__r.Channel_Label_vod__c,
IF(
  RecordType.DeveloperName = &apos;Product_vod&apos;,
  Product_vod__r.Name,
NULL
))</formula>
        <label>Summary For</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Team_Attainment_vod__c</fullName>
        <description>Team_Interactions_Earned_vod / Team_Interactions_Goal_vod. If no goals then value is blank.</description>
        <label>Team Attainment</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Team_Interactions_Earned_vod__c</fullName>
        <description>Sum of all team interactions earned based on the RecordType.</description>
        <label>Team Interactions Earned</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Team_Interactions_Goal_vod__c</fullName>
        <description>Sum of all team interaction goals based on the RecordType</description>
        <label>Team Interactions Goal</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Team_Status_vod__c</fullName>
        <description>Comparing the Target&apos;s Team Attainment and the % Cycle Completed.</description>
        <label>Team Status</label>
        <picklist>
            <picklistValues>
                <fullName>On_Schedule_vod</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Under_Reached_vod</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Over_Reached_vod</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Veeva_External_Id_vod__c</fullName>
        <description>System set external id field.</description>
        <externalId>true</externalId>
        <label>Veeva External ID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>MC Cycle Plan Summary</label>
    <nameField>
        <displayFormat>CPS-{0000}</displayFormat>
        <label>Cycle Plan Summary</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>MC Cycle Plan Summaries</pluralLabel>
    <recordTypes>
        <fullName>Channel_vod</fullName>
        <active>true</active>
        <description>Aggregate calculations for each distinct channel for a cycle plan.</description>
        <label>Channel_vod</label>
    </recordTypes>
    <recordTypes>
        <fullName>Product_vod</fullName>
        <active>true</active>
        <description>Aggregate calculations for each distinct product for a cycle plan.</description>
        <label>Product_vod</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>